<resources>
    <string name="app_name">TaskMaster</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btn_Login">Ir a login</string>
    <string name="txt_Bienvenido">Bienvenido a TaskMaster</string>
    <string name="txt_inicio">Ingresa tu nombre</string>
    <string name="txt_password">Ingresa tu contraseña</string>
    <string name="txt_usuario">Name</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="btn_2">Iniciar sesion</string>
    <string name="btn_regresar">Regresar a pagina principal</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>